--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1500,6 +1500,19 @@
   url       = {http://arxiv.org/abs/1511.01964},
 }
 
+@Article{Aragon2008,
+  author    = {Aragón, J. L. and Naumis, G. G. and Bai, M. and Torres, M. and Maini, P. K.},
+  title     = {Turbulent Luminance in Impassioned van Gogh Paintings},
+  journal   = {Journal of Mathematical Imaging and Vision},
+  year      = {2008},
+  volume    = {30},
+  number    = {3},
+  pages     = {275-283},
+  doi       = {10.1007/s10851-007-0055-0},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+}
+
 @InProceedings{Arai2010,
   author    = {Arai, K. and Herman, T.},
   title     = {Method for Automatic E-Comic Scene Frame Extraction for Reading Comic on Mobile Devices},
@@ -2422,6 +2435,19 @@
   owner     = {Vincent},
   timestamp = {2019.03.30},
   url       = {https://trove.nla.gov.au/work/25235617},
+}
+
+@Article{Bank2014,
+  author    = {Bank, C. and Hietpas, R. T. and Jensen, J. D. and Bolon, D. N. A.},
+  title     = {A Systematic Survey of an Intragenic Epistatic Landscape},
+  journal   = {Molecular Biology and Evolution},
+  year      = {2014},
+  volume    = {32},
+  number    = {1},
+  pages     = {229-238},
+  doi       = {10.1093/molbev/msu301},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
 }
 
 @InProceedings{Banko2007,
@@ -4854,6 +4880,19 @@
   url       = {http://www.gutenberg.org/ebooks/36773},
 }
 
+@Article{Brady2017,
+  author    = {Brady, W. J. and Wills, J. A. and Jost, J. T. and Tucker, J. A. and Van Bavel, J. J.},
+  title     = {Emotion shapes the diffusion of moralized content in social networks},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2017},
+  volume    = {114},
+  number    = {28},
+  pages     = {7313-7318},
+  doi       = {10.1073/pnas.1618923114},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+}
+
 @InCollection{Braha2009,
   author    = {Braha, D. and Bar-Yam, Y.},
   title     = {Time-Dependent Complex Networks: Dynamic Centrality, Dynamic Motifs, and Cycles of Social Interactions},
@@ -5301,6 +5340,19 @@
   doi       = {10.1080/01621459.1974.10482955},
   owner     = {Vincent},
   timestamp = {2020.11.30},
+}
+
+@Article{Brown1975,
+  author    = {Brown, R. E.},
+  title     = {Roles of Women in the Fourth Gospel},
+  journal   = {Theological Studies},
+  year      = {1975},
+  volume    = {36},
+  number    = {4},
+  pages     = {688-699},
+  doi       = {10.1177/004056397503600406},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
 }
 
 @Book{Brown1987,
@@ -6224,6 +6276,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.jstor.org/stable/10.5325/style.42.2-3.103},
 }
 
+@Article{Carson1978,
+  author    = {Carson, D. A.},
+  title     = {Current Source Criticism of the Fourth Gospel: Some Methodological Questions},
+  journal   = {Journal of Biblical Literature},
+  year      = {1978},
+  volume    = {97},
+  number    = {3},
+  pages     = {411},
+  doi       = {10.2307/3266168},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+}
+
 @Article{Carstens2013,
   author    = {Carstens, C. J. and Horadam, K. J.},
   title     = {Persistent homology of collaboration networks},
@@ -6337,6 +6402,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1515/9783110866377.89},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@Article{Cavalli-Sforza1967,
+  author    = {Cavalli-Sforza, L. L. and Edwards, A. W. F.},
+  title     = {Phylogenetic Analysis: Models and Estimation Procedures},
+  journal   = {Evolution},
+  year      = {1967},
+  volume    = {21},
+  number    = {3},
+  pages     = {550},
+  doi       = {10.2307/2406616},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
 }
 
 @InProceedings{Cavnar1994,
@@ -7492,6 +7570,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   groups    = {Power Law},
   owner     = {Vincent},
   timestamp = {2020.12.18},
+}
+
+@Article{Clark2014,
+  author    = {Clark, C. and Kalita, J.},
+  title     = {A comparison of algorithms for the pairwise alignment of biological networks},
+  journal   = {Bioinformatics},
+  year      = {2014},
+  volume    = {30},
+  number    = {16},
+  pages     = {2351-2359},
+  doi       = {10.1093/bioinformatics/btu307},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
 }
 
 @Article{Clarke2010,
@@ -9885,6 +9976,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.01.03},
 }
 
+@Article{Dreyer2012,
+  author    = {Dreyer, W. A.},
+  title     = {The amazing growth of the early church},
+  journal   = {HTS Teologiese Studies/Theological Studies},
+  year      = {2012},
+  volume    = {68},
+  number    = {1},
+  pages     = {1268},
+  doi       = {10.4102/hts.v68i1.1268},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+}
+
 @Article{Drieger2013,
   author    = {Drieger, P.},
   title     = {Semantic Network Analysis as a Method for Visual Text Analytics},
@@ -9895,6 +9999,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1016/j.sbspro.2013.05.053},
   owner     = {Vincent},
   timestamp = {2020.07.23},
+}
+
+@Article{Drod2016,
+  author    = {Drożdża, S. and Oświȩcimka, P. and Kulig, A. and Kwapień, J. and Bazarnik, K. and Grabska-Gradzińska, I. and Rybicki, J. and Stanuszek, M.},
+  title     = {Quantifying origin and character of long-range correlations in narrative texts},
+  journal   = {Information Sciences},
+  year      = {2016},
+  volume    = {331},
+  pages     = {32-44},
+  doi       = {10.1016/j.ins.2015.10.023},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
 }
 
 @InProceedings{Dror2018,
@@ -10556,6 +10672,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.04.01},
 }
 
+@Article{Efron1979a,
+  author    = {Efron, B.},
+  title     = {Bootstrap Methods: Another Look at the Jackknife},
+  journal   = {The Annals of Statistics},
+  year      = {1979},
+  volume    = {7},
+  number    = {1},
+  doi       = {10.1214/aos/1176344552},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+}
+
 @Book{Efron1982,
   title     = {The Jackknife, the Bootstrap and Other Resampling Plans},
   publisher = {Society for Industrial and Applied Mathematics},
@@ -10566,6 +10694,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1137/1.9781611970319},
   owner     = {Vincent},
   timestamp = {2020.07.22},
+}
+
+@Article{Efron1996,
+  author    = {Efron, B. and Halloran, E. and Holmes, S.},
+  title     = {Bootstrap confidence levels for phylogenetic trees},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {1996},
+  volume    = {93},
+  number    = {23},
+  pages     = {13429-13429},
+  doi       = {10.1073/pnas.93.23.13429},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
 }
 
 @InProceedings{Efros2003,
@@ -11660,6 +11801,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://mitpress.mit.edu/books/wordnet},
 }
 
+@Article{Felsenstein1985,
+  author    = {Felsenstein, J.},
+  title     = {Confidence Limits on Phylogenies: An Approach Using the Bootstrap},
+  journal   = {Evolution},
+  year      = {1985},
+  volume    = {39},
+  number    = {4},
+  pages     = {783},
+  doi       = {10.2307/2408678},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+}
+
 @Article{Felski2009,
   author    = {Felski, R.},
   title     = {After suspicion},
@@ -12384,6 +12538,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://ia801909.us.archive.org/2/items/in.ernet.dli.2015.509170/2015.509170.Aspects-Of.pdf},
 }
 
+@Book{Forster1964,
+  title     = {Palestinian Judaism in New Testament times},
+  publisher = {Oliver and Boyd},
+  year      = {1964},
+  author    = {Forster, W.},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+  url       = {https://www.worldcat.org/title/palestinian-judaism-in-new-testament-times/oclc/1807252&referer=brief_results},
+}
+
 @InProceedings{Fortuin2018,
   author    = {Fortuin, V. and Weber, R. M. and Schriber, S. and Wotruba, D. and Gross, M.},
   title     = {InspireMe: Learning Sequence Models for Stories},
@@ -12963,6 +13127,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2020.12.01},
   url       = {https://www.upress.umn.edu/book-division/books/the-exploit},
+}
+
+@Article{Galtier2004,
+  author    = {Galtier, N.},
+  title     = {Sampling Properties of the Bootstrap Support in Molecular Phylogeny: Influence of Nonindependence Among Sites},
+  journal   = {Systematic Biology},
+  year      = {2004},
+  volume    = {53},
+  number    = {1},
+  pages     = {38-46},
+  doi       = {10.1080/10635150490264680},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
 }
 
 @InProceedings{Gamon2004,
@@ -13873,6 +14050,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.12.18},
 }
 
+@Article{Goldfarb1970a,
+  author    = {Goldfarb, D.},
+  title     = {A family of variable-metric methods derived by variational means},
+  journal   = {Mathematics of Computation},
+  year      = {1970},
+  volume    = {24},
+  number    = {109},
+  pages     = {23-23},
+  doi       = {10.1090/s0025-5718-1970-0258249-6},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+}
+
 @Book{Goldman1985,
   title     = {Acting and Action in Shakespearean Tragedy},
   publisher = {Princeton University Press},
@@ -13979,6 +14169,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1016/j.neucom.2014.11.034},
   owner     = {Vincent},
   timestamp = {2019.04.03},
+}
+
+@Book{Goodacre2001,
+  title     = {The synoptic problem. A way through the maze},
+  publisher = {T and T Clark International},
+  year      = {2001},
+  author    = {Goodacre, M.},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+  url       = {https://markgoodacre.org/maze/},
 }
 
 @Book{Goodman1996,
@@ -14236,7 +14436,7 @@ arXiv: https://arxiv.org/abs/1709.07604},
 
 @Article{Granovetter1973,
   author    = {Granovetter, M.},
-  title     = {The strength of weak ties},
+  title     = {The Strength of Weak Ties},
   journal   = {American Journal of Sociology},
   year      = {1973},
   volume    = {78},
@@ -15083,6 +15283,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1109/tvcg.2009.165},
   owner     = {Vincent},
   timestamp = {2020.08.13},
+}
+
+@InCollection{Hamberger2011,
+  author    = {Hamberger, K. and Houseman, M. and White, D. R.},
+  title     = {Kinship network analysis},
+  booktitle = {The Sage handbook of network analysis},
+  publisher = {Sage Publications},
+  year      = {2011},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+  url       = {https://halshs.archives-ouvertes.fr/halshs-00658667},
 }
 
 @PhdThesis{Hamer2008,
@@ -16172,6 +16383,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s12110-003-1016-y},
   owner     = {Vincent},
   timestamp = {2019.03.26},
+}
+
+@Article{Hillis1993,
+  author    = {Hillis, D. M. and Bull, J. J.},
+  title     = {An Empirical Test of Bootstrapping as a Method for Assessing Confidence in Phylogenetic Analysis},
+  journal   = {Systematic Biology},
+  year      = {1993},
+  volume    = {42},
+  number    = {2},
+  pages     = {182-192},
+  doi       = {10.1093/sysbio/42.2.182},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
 }
 
 @Electronic{Hillsdon2013,
@@ -17686,6 +17910,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/15427951.2012.671149},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Article{Janwa2019,
+  author    = {Janwa, H. and Massey, S. E. and Velev, J. and Mishra, B.},
+  title     = {On the Origin of Biomolecular Networks},
+  journal   = {Frontiers in Genetics},
+  year      = {2019},
+  volume    = {10},
+  doi       = {10.3389/fgene.2019.00240},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
 }
 
 @InProceedings{Jaques2016,
@@ -19479,6 +19714,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.06.03},
 }
 
+@Article{Klemm2002,
+  author    = {Klemm, K. and Eguiluz, V. M.},
+  title     = {Growing scale-free networks with small-world behavior},
+  journal   = {Physical Review E},
+  year      = {2002},
+  volume    = {65},
+  pages     = {057102},
+  doi       = {10.1103/PhysRevE.65.057102},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+}
+
 @Article{Klemm2002a,
   author    = {Klemm, K. and Eguiluz, V. M.},
   title     = {Highly clustered scale-free networks},
@@ -19530,6 +19777,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.23},
   url       = {http://www.romanklinger.de/publications/klinger-samat-reiter2016.pdf},
+}
+
+@Book{Kloppenborg2008,
+  title     = {Q, the Earliest Gospel: An Introduction to the Original Stories and Sayings of Jesus},
+  publisher = {Westminster John Knox Press},
+  year      = {2008},
+  author    = {Kloppenborg, J. S.},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+  url       = {https://books.google.fr/books/about/Q_the_Earliest_Gospel.html?id=L8Q9pYmQdVsC},
 }
 
 @Book{Knoke1982,
@@ -19675,6 +19932,33 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-030-16272-6},
   owner     = {Vincent},
   timestamp = {2021.03.06},
+}
+
+@InProceedings{Kolountzakis2010,
+  author    = {Kolountzakis, M. N. and Miller, G. L. and Peng, R. and Tsourakakis, C. E.},
+  title     = {Efficient Triangle Counting in Large Graphs via Degree-Based Vertex Partitioning},
+  booktitle = {International Workshop on Algorithms and Models for the Web-Graph},
+  year      = {2010},
+  volume    = {6516},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {15-24},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-642-18009-5_3},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+}
+
+@Article{Kolountzakis2012,
+  author    = {Kolountzakis, M. N. and Miller, G. L. and Peng, R. and Tsourakakis, C. E.},
+  title     = {Efficient Triangle Counting in Large Graphs via Degree-Based Vertex Partitioning},
+  journal   = {Internet Mathematics},
+  year      = {2012},
+  volume    = {8},
+  number    = {1-2},
+  pages     = {161-185},
+  doi       = {10.1080/15427951.2012.625260},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
 }
 
 @Article{Kontoleon2013,
@@ -19974,6 +20258,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2012.07.25},
 }
 
+@Article{Krause2010,
+  author    = {Krause, J. and James, R. and Croft, D. P.},
+  title     = {Personality in the context of social networks},
+  journal   = {Philosophical Transactions of the Royal Society B},
+  year      = {2010},
+  volume    = {365},
+  number    = {1560},
+  pages     = {4099-4106},
+  doi       = {10.1098/rstb.2010.0216},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+}
+
 @Article{Krause2014,
   author    = {Krause, T. and Zeldes, A.},
   title     = {ANNIS3: A new architecture for generic corpus query and visualization},
@@ -20220,6 +20517,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/llc/fqab012},
   owner     = {Vincent},
   timestamp = {2021.03.27},
+}
+
+@Article{Kuchaiev2011,
+  author    = {Kuchaiev, O. and Pržulj, N.},
+  title     = {Integrative network alignment reveals large regions of global network similarity in yeast and human},
+  journal   = {Bioinformatics},
+  year      = {2011},
+  volume    = {27},
+  number    = {10},
+  pages     = {1390-1396},
+  doi       = {10.1093/bioinformatics/btr127},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
 }
 
 @Article{Kudo2001,
@@ -25119,6 +25429,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.12},
 }
 
+@Book{McKenzieAlexander2007,
+  title     = {The Structural Evolution of Morality},
+  publisher = {Cambridge University Press},
+  year      = {2007},
+  author    = {McKenzie Alexander, J.},
+  doi       = {10.1017/cbo9780511550997},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+}
+
 @PhdThesis{McKinnon2010,
   author    = {McKinnon, J. S.},
   title     = {The dramaturgy appropriation: how Canadian Playwrights use and abuse Shakespeare and Chekhov},
@@ -25860,6 +26180,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jstor.org/stable/j.ctt15r3zwk},
 }
 
+@Article{Mitzenmacher2003,
+  author    = {Mitzenmacher, M.},
+  title     = {A Brief History of Generative Models for Power Law and Lognormal Distributions},
+  journal   = {Internet Mathematics},
+  year      = {2003},
+  volume    = {1},
+  number    = {2},
+  pages     = {226-251},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+  url       = {https://projecteuclid.org/journals/internet-mathematics/volume-1/issue-2/A-Brief-History-of-Generative-Models-for-Power-Law-and/im/1089229510.full},
+}
+
 @Book{Mizruchi1982,
   title     = {The American Corporate Network, 1904-1974},
   publisher = {Sage Publications},
@@ -26028,6 +26361,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/1823746.1823751},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@Article{Montanari2010,
+  author    = {Montanari, A. and Saberi, A.},
+  title     = {The spread of innovations in social networks},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2010},
+  volume    = {107},
+  number    = {47},
+  pages     = {20196-20201},
+  doi       = {10.1073/pnas.1004098107},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
 }
 
 @Article{MONTOYA2002,
@@ -27531,6 +27877,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2010.10.05},
   url       = {https://global.oup.com/academic/product/networks-9780199206650?cc=fr&lang=en&},
+}
+
+@Article{Neyshabur2013,
+  author    = {Neyshabur, B. and Khadem, A. and Hashemifar, S. and Arab, S. S.},
+  title     = {{NETAL}: a new graph-based method for global alignment of protein-protein interaction networks},
+  journal   = {Bioinformatics},
+  year      = {2013},
+  volume    = {29},
+  number    = {13},
+  pages     = {1654-1662},
+  doi       = {10.1093/bioinformatics/btt202},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
 }
 
 @Article{NezValdz2012,
@@ -32737,6 +33096,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://oic.uqam.ca/fr/biblio/lempire-du-pseudo-modernites-de-la-science-fiction},
 }
 
+@Article{Saitou1987,
+  author    = {Saitou, N. and Nei, M.},
+  title     = {The neighbor-joining method: a new method for reconstructing phylogenetic trees.},
+  journal   = {Molecular Biology and Evolution},
+  year      = {1987},
+  volume    = {4},
+  number    = {4},
+  pages     = {406-425},
+  doi       = {10.1093/oxfordjournals.molbev.a040454},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+}
+
 @Article{Salamin2009,
   author    = {Salamin, H. and Favre, S. and Vinciarelli, A.},
   title     = {Automatic role recognition in multiparty recordings: Using social affiliation networks for feature extraction},
@@ -32854,6 +33226,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1002/asi.20450},
   owner     = {Vincent},
   timestamp = {2020.01.02},
+}
+
+@Book{Sanders1994,
+  title     = {The historical figure of Jesus},
+  publisher = {Viking},
+  year      = {1994},
+  author    = {Sanders, E. P.},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+  url       = {https://books.google.fr/books/about/The_Historical_Figure_of_Jesus.html?id=Ya4NAQAAMAAJ},
 }
 
 @Book{Sanders2015,
@@ -33064,6 +33446,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1209/epl/i2001-00457-7},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@Article{Scarsoglio2016,
+  author    = {Scarsoglio, S. and Iacobello, G. and Ridolfi, L.},
+  title     = {Complex Networks Unveiling Spatial Patterns in Turbulence},
+  journal   = {International Journal of Bifurcation and Chaos},
+  year      = {2016},
+  volume    = {26},
+  number    = {13},
+  pages     = {1650223},
+  doi       = {10.1142/s0218127416502230},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
 }
 
 @InCollection{Schafer2007,
@@ -33421,6 +33816,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.10},
 }
 
+@Book{Schweitzer1911,
+  title     = {The quest of the historical Jesus},
+  publisher = {Adam and Charles Black},
+  year      = {1911},
+  author    = {Schweitzer, A.},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+  url       = {https://www.gutenberg.org/files/45422/45422-pdf.pdf},
+}
+
 @Article{SCHWEITZER2009,
   author    = {Schweitzer, F. and Fagiolo, G. and Sornette, D. and Vega-redondo, F. and White, D. R.},
   title     = {Economic Networks: What do we Know and What do we Need to Know?},
@@ -33577,6 +33982,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   issue     = {3},
   owner     = {Vincent},
   timestamp = {2018.06.12},
+}
+
+@Article{Sellew1990,
+  author    = {Sellew, P.},
+  title     = {Oral and Written Sources in Mark 4.1{\textendash}34},
+  journal   = {New Testament Studies},
+  year      = {1990},
+  volume    = {36},
+  number    = {2},
+  pages     = {234-267},
+  doi       = {10.1017/s0028688500015071},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
 }
 
 @Article{SendiaNadal2016,
@@ -35406,6 +35824,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://aclanthology.info/papers/L04-1208/l04-1208},
 }
 
+@Book{Streeter1924,
+  title     = {The four gospels. A study of origins},
+  publisher = {Macmillan and Company},
+  year      = {1924},
+  author    = {Streeter, B. H.},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+  url       = {https://books.google.fr/books?id=oD9KAwAAQBAJ},
+}
+
 @Article{Streitfeld2018,
   author    = {Streitfeld, D.},
   title     = {Computer Stories: A.I. Is Beginning to Assist Novelists},
@@ -35816,6 +36244,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.01.05},
   url       = {https://www.actaphys.uj.edu.pl/fulltext?series=Reg&vol=36&page=2537},
+}
+
+@Article{Tabassum2018,
+  author    = {Tabassum, S. and Pereira, F. S. F. and Fernandes, S. and Gama, J.},
+  title     = {Social network analysis: An overview},
+  journal   = {WIREs Data Mining and Knowledge Discovery},
+  year      = {2018},
+  volume    = {8},
+  number    = {5},
+  pages     = {e1256},
+  doi       = {10.1002/widm.1256},
+  owner     = {Vincent},
+  timestamp = {2018.04.26},
 }
 
 @InProceedings{Taghipour2016,
@@ -36289,6 +36730,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/acprof:oso/9780198122562.001.0001},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+}
+
+@Article{Taylor1999,
+  author    = {Taylor, R. P. and Micolich, A. P. and Jonas, D.},
+  title     = {Fractal analysis of Pollock's drip paintings},
+  journal   = {Nature},
+  year      = {1999},
+  volume    = {399},
+  number    = {6735},
+  pages     = {422-422},
+  doi       = {10.1038/20833},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
 }
 
 @InCollection{Taylor2002,
@@ -37336,6 +37790,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.23},
 }
 
+@Article{Turcotte2002,
+  author    = {Turcotte, D. L. and Rundle, J. B.},
+  title     = {Self-organized complexity in the physical, biological, and social sciences},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2002},
+  volume    = {99},
+  number    = {Supplement 1},
+  pages     = {2463-2465},
+  doi       = {10.1073/pnas.012579399},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+}
+
 @InProceedings{Turetsky2004,
   author    = {Turetsky, R. and Dimitrova, N.},
   title     = {Screenplay alignment for closed-system speaker identification and analysis of feature films},
@@ -38247,6 +38714,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {xavier},
   publisher = {JSTOR},
   timestamp = {2015.11.22},
+}
+
+@Article{Vuong1989a,
+  author    = {Vuong, Q. H.},
+  title     = {Likelihood Ratio Tests for Model Selection and Non-Nested Hypotheses},
+  journal   = {Econometrica},
+  year      = {1989},
+  volume    = {57},
+  number    = {2},
+  pages     = {307},
+  doi       = {10.2307/1912557},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
 }
 
 @Article{Waddell1983,
@@ -40060,6 +40540,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.tib.eu/en/search/id/BLCP%3ACN055695260/Changing-Correlations-in-Networks-Assortativity/},
 }
 
+@Article{Yamada2011,
+  author    = {Yamada, T. and Letunic, I. and Okuda, S. and Kanehisa, M. and Bork, P.},
+  title     = {{iPath}2.0: interactive pathway explorer},
+  journal   = {Nucleic Acids Research},
+  year      = {2011},
+  volume    = {39},
+  number    = {suppl2},
+  pages     = {W412-W415},
+  doi       = {10.1093/nar/gkr313},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+}
+
 @TechReport{Yanagawa2007,
   author      = {Yanagawa, A. and Chang, S.-F. and Kennedy, L. and Hsu, W.},
   title       = {Columbia university's baseline detectors for 374 lscom semantic visual concepts},
@@ -40149,6 +40642,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/1101149.1101155},
   owner     = {Vincent},
   timestamp = {2019.03.31},
+}
+
+@Book{Yang2006,
+  title     = {Computational molecular evolution},
+  publisher = {Oxford University Press},
+  year      = {2006},
+  author    = {Yang, Z.},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+  url       = {https://books.google.fr/books/about/Computational_Molecular_Evolution.html?id=j4ESDAAAQBAJ},
 }
 
 @InProceedings{Yang2009b,
